eks-handson/apps/demo-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  namespace: demo
spec:
  selector:
    app: demo-web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
